prog/1stPartyLibs/quirrel/quirrel/testData/exec/runtime_type_check/assign_wrong_type_05.out
ERROR: expression of type 'table' cannot be assigned to type 'array'
testData/exec/runtime_type_check/assign_wrong_type_05.nut:5:4

    y.append(333)
    y = {}
    ^
}


Error [Failed to compile file testData/exec/runtime_type_check/assign_wrong_type_05.nut (testData/exec/runtime_type_check/assign_wrong_type_05.nut)]
